--- a/projects.json
+++ b/projects.json
@@ -1,14 +1,10 @@
 [
   {
-    "title": "Engine Efficiency Visualizer",
-    "description": "Plots engine efficiency curves based on input load data."
+    "title": "Engine Efficiency Plot",
+    "description": "Plots engine efficiency based on load. Great for mechanical insight."
   },
   {
-    "title": "Fuel Efficiency Predictor (GUI)",
-    "description": "Tkinter app for predicting MPG using machine learning."
-  },
-  {
-    "title": "Pipe Heat Loss Simulator",
-    "description": "Calculates thermal losses through pipelines using conduction equations."
+    "title": "Fuel Efficiency ML",
+    "description": "Machine learning model for predicting fuel consumption from car specs."
   }
 ]
